# CPP-lang

./: .gitignore  CPP.cabal  CPP.cf  LICENSE  Makefile  README.md  README.org  TODO.md  cabal.project.local  default.nix  hie.yaml  release.nix  shell.nix  stack.yaml
.github/workflows/: test.yml
app/: Main.hs
examples/: bad.cc  fib.cc  good.cc
grammar-example/: CPP.cf  Makefile  progs-test-lab1.hs
grammar-example/examples/: grammar.cc  greet.cc
inference-example/: example.org
jvm/: Main.j  Main.java  Makefile  README.org  Runtime.java  manifest.mf  runtime.java
nix/: nixpkgs.json
src/: AbsCPP.hs  CPP.hs  Counter.hs  Extra.hs  LexCPP.x  ParCPP.y  TypeChecker.hs  Util.hs
src/CPP/: AST.hs  Abs.hs  Error.hs  Interpreter.hs  Lex.x  Lexer.x  Par.y  Parser.y  Print.hs  TypeChecker.hs
src/CPP/JVM/: CodeGen.hs  CodeGenerator.hs  Jasmin.hs  Runtime.hs
src/CPP/Lexer/: Support.hs
test/: InterpreterSpec.hs  Main.hs  Spec.hs  TypeCheckerSpec.hs  Util.hs
test/Test/: CodeGen.hs  Interpreter.hs  TypeChecker.hs  Util.hs
test/Test/CodeGen/: Good01.hs  Good02.hs  Good03.hs
test/interpreter/good/: for.cc  good05.cc
test/resources/interpreter/good/: fib.cc
test/resources/type-checking/bad/: AddWrongTypes.cc  AppNotEnoughArguments.cc  AppWrongTypes.cc  Assignment1.cc  Assignment2.cc  Assignment3.cc  Downcasting.cc  IncrementExpr.cc  WrongReturnType.cc
test/resources/type-checking/good/: All.cc  RecursiveFunction.cc  Return2.cc  VariableOuterBlock.cc
test/type-checking/bad/: AddWrong.types  FunMultipleDecl.cc  IncrementString.cc  MissingFunction.cc  MissingReturn.cc  MissingVariable.cc  VarMultipleDecl.cc
test/type-checking/good/: ExplicitCast.cc  ImplicitCast.cc  Return1.cc  VariableShadowing.cc
