cabal-version:       >= 1.10

name:                CPP
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        LICENSE
author:              Arnau Abella
maintainer:          arnauabella@gmail.com
copyright:           2021 Arnau Abella
homepage:            https://github.com/monadplus/CPP-lang
bug-reports:         https://github.com/monadplus/CPP-lang/issues
synopsis:
description:
category:
extra-source-files:
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/monadplus/CPP.git

Executable CPP
  default-language:      Haskell2010
  main-is:               Main.hs
  hs-source-dirs:        app

  build-depends:         CPP,
                         base >=4.12 && <4.15

  ghc-options:           -O2 -threaded -rtsopts -with-rtsopts=-N

Library
  default-language:   Haskell2010
  hs-source-dirs:     src
  build-tools:        alex, happy

  exposed-modules:    CPP
                        CPP.Abs
                        CPP.Error
                        CPP.Interpreter
                        CPP.JVM.CodeGenerator
                        CPP.JVM.Jasmin
                        CPP.Par
                        CPP.Lex
                        CPP.TypeChecker

  build-depends:      array              ==0.5.4.0,
                      base               >=4.12     && <4.15,
                      bytestring         >=0.10.8.2 && <0.11.0.0,
                      containers         >=0.5.0.1  && <0.7,
                      deepseq            >=1.4      && <1.5,
                      microlens-platform >=0.4.1    && <0.5,
                      mtl                >=2.2.2    && <2.3,
                      one-liner          >=1.0      && <2.0,
                      text               >=1.2.3.0  && <2.0.0.0

  ghc-options:        -Wall
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wcompat
                      -Widentities
                      -Wredundant-constraints
                      -Wpartial-fields
                      -fhide-source-paths
                      -freverse-errors
  if impl(ghc >= 8.8.1)
    ghc-options:      -Wmissing-deriving-strategies
                      -Werror=missing-deriving-strategies

  default-extensions: AllowAmbiguousTypes
                      BangPatterns
                      ConstraintKinds
                      DataKinds
                      DefaultSignatures
                      DeriveAnyClass
                      DeriveDataTypeable
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveTraversable
                      DerivingStrategies
                      DerivingVia
                      DuplicateRecordFields
                      EmptyCase
                      EmptyDataDecls
                      FlexibleContexts
                      FlexibleInstances
                      FunctionalDependencies
                      GADTs
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      KindSignatures
                      LambdaCase
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      QuasiQuotes
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      StandaloneKindSignatures
                      TemplateHaskell
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      UndecidableInstances
                      RoleAnnotations
                      ViewPatterns

Test-suite CPP-tests
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       test

  other-modules:        InterpreterSpec
                        TypeCheckerSpec
                        Util

  build-depends:        CPP,
                        base               >=4.12     && <4.15,
                        directory          >=1.3.6.0  && <1.4,
                        deepseq            >=1.4      && <1.5,
                        filepath           >= 1.4.2.0 && <1.5,
                        hspec              >=2.6.0    && <2.8,
                        hspec-core         >=2.6.0    && <2.8,
                        hspec-expectations >=0.8.0    && <0.9,
                        QuickCheck         >=2.14     && <2.15

  ghc-options:          -Wall
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -Wcompat
                        -Widentities
                        -Wredundant-constraints
                        -Wpartial-fields
                        -fhide-source-paths
                        -freverse-errors
  if impl(ghc >= 8.8.1)
    ghc-options:        -Wmissing-deriving-strategies
                        -Werror=missing-deriving-strategies

  default-extensions:   AllowAmbiguousTypes
                        BangPatterns
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveAnyClass
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DerivingStrategies
                        DerivingVia
                        DuplicateRecordFields
                        EmptyCase
                        EmptyDataDecls
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        NamedFieldPuns
                        OverloadedStrings
                        PolyKinds
                        QuasiQuotes
                        RankNTypes
                        RecordWildCards
                        RoleAnnotations
                        ScopedTypeVariables
                        StandaloneDeriving
                        StandaloneKindSignatures
                        TemplateHaskell
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeOperators
                        UndecidableInstances
                        ViewPatterns
