cabal-version:      3.0
name:               CPP
version:            0.1.0.0
build-type:         Simple
license:            MIT
license-file:       LICENSE
author:             Arnau Abella
maintainer:         arnau.abella@monadplus.pro
copyright:          2022 Arnau Abella
homepage:           https://github.com/monadplus/CPP-lang
bug-reports:        https://github.com/monadplus/CPP-lang/issues
synopsis:
description:
category:
extra-source-files:
tested-with:        GHC ==9.2.7

source-repository head
  type:     git
  location: https://github.com/monadplus/CPP.git

common common-options
  default-language:   Haskell2010
  build-depends:      base ^>=4.16
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  if impl(ghc >=9.0)
    ghc-options: -Winvalid-haddock

  if impl(ghc >=9.2)
    ghc-options: -Wredundant-bang-patterns -Woperator-whitespace

  if impl(ghc >=9.4)
    ghc-options: -Wredundant-strictness-flags

  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

flag dev
  description: Turn on development settings.
  default:     False
  manual:      True

executable CPP
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  CPP

  if flag(dev)
    ghc-options: -O0

  else
    ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N

library
  import:             common-options
  hs-source-dirs:     src
  build-tool-depends:
    , alex:alex    ^>=3.2
    , happy:happy  ^>=1.20

  exposed-modules:
    CPP
    CPP.AST
    CPP.Error
    CPP.Interpreter
    CPP.JVM.CodeGen
    CPP.JVM.Jasmin
    CPP.JVM.Runtime
    CPP.Lexer
    CPP.Parser
    CPP.TypeChecker
    Extra

  build-depends:
    , array               ^>=0.5.4
    , bytestring          ^>=0.11
    , containers          ^>=0.6
    , directory           ^>=1.3
    , filepath            ^>=1.4
    , microlens-platform  ^>=0.4
    , mtl                 ^>=2.2.2
    , string-qq           ^>=0.0.4
    , typed-process       ^>=0.2

test-suite CPP-tests
  import:         common-options
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Test.CodeGen
    Test.CodeGen.Good01
    Test.CodeGen.Good02
    Test.CodeGen.Good03
    Test.Interpreter
    Test.TypeChecker
    Test.Util

  build-depends:
    , CPP
    , deepseq             ^>=1.4
    , directory           ^>=1.3
    , filepath            ^>=1.4
    , hspec               ^>=2.8
    , hspec-expectations  ^>=0.8
    , string-qq           ^>=0.0.4
